--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,3 +25,5 @@ jobs:
         sudo apt-get install libxml2-dev libxslt1-dev python-dev
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Run migrations
+      run: python manage.py migrate
