--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,7 +24,7 @@ jobs:
         python-version: 3.9
     - name: Install dependencies
       run: |
-        # sudo apt-get install libxml2-dev libxslt1-dev python-dev
+        sudo apt-get install libxml2-dev libxslt1-dev python-dev
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run migrations
