--- a/.ebextensions/cron-linux.config
+++ b/.ebextensions/cron-linux.config
@@ -4,7 +4,7 @@ files:
     owner: root
     group: root
     content: |
-      * * * * * root python manage.py scheduler >> /var/log/scheduler.log 2>&1
+      * * * * * python manage.py scheduler >> /var/log/scheduler.log 2>&1
 commands:
   remove_old_cron:
   command: "rm -f /etc/cron.d/mycron.bak"
