--- a/.ebextensions/schedule_tracking_cron.config
+++ b/.ebextensions/schedule_tracking_cron.config
@@ -5,9 +5,8 @@ files:
         group: root
         content: |
             #!/bin/bash
-            source /opt/python/run/venv/bin/activate
-            source /opt/python/current/env
-            cd /opt/python/current/app
+            source /var/app/venv/*/bin/activate
+            cd /var/app/current
             python manage.py schedule_tracking >> /var/log/scheduler.log 2>&1
 
     /etc/cron.d/schedule_tracking_cron:
