--- a/.ebextensions/schedule_tracking_cron.config
+++ b/.ebextensions/schedule_tracking_cron.config
@@ -5,8 +5,9 @@ files:
         group: root
         content: |
             #!/bin/bash
-            source /var/app/venv/*/bin/activate
-            cd /var/app/current
+            source /opt/python/run/venv/bin/activate
+            source /opt/python/current/env
+            cd /opt/python/current/app
             python manage.py schedule_tracking >> /var/log/scheduler.log 2>&1
 
     /etc/cron.d/schedule_tracking_cron:
